# gh-search-agent

./: .env.example  .gitignore  AGENTS.md  README.md  install.sh  pyproject.toml
datasets/: AGENTS.md  ambiguous_eval_qids.json  candidate_dataset.json  eval_dataset_paraphrase.json  eval_dataset_reviewed.json  failure_cases.jsonl  failure_eval_qids.json  formal_eval_qids.json  ground_truth_structured_query.json  paraphrase_eval_qids.json  smoke_eval_dataset.json
prompts/appendix/: intention-claude-sonnet-4.md  intention-deepseek-r1.md  intention-gpt-4.1-mini.md  parse-claude-sonnet-4-v1.md  parse-deepseek-r1-v1.md  parse-gpt-4.1-mini-v1.md  repair-claude-sonnet-4.md  repair-deepseek-r1-v1.md  repair-gpt-4.1-mini-v1.md
scripts/: build_model_matrix.py
specs/main/: EVAL.md  (+8 more)
tests/: AGENTS.md  test_agent_loop.py  test_anthropic_client.py  test_build_model_matrix.py  test_cli_provider_routing.py  test_cli_query.py  test_cli_scaffold.py  test_compiler.py  test_deepseek_client.py  test_eval_dataset_governance.py  test_github_client.py  test_golden_iter0.py  test_keyword_integration.py  test_llm_factory.py  test_logger.py  test_openai_client.py  test_paraphrase_harness.py  test_parser_prompt_date_rules.py  test_prompt_composer.py  test_retrieval_logging.py  test_runtime_prompt_wiring.py  test_schemas_logs.py  test_schemas_shared_state.py  test_schemas_structured_query.py  test_scorer.py  test_smoke_runner.py  test_tool_compile.py  test_tool_execute.py  test_tool_intention_judge.py  test_tool_parse_query.py  test_tool_repair.py  test_tool_validate_query.py  test_validator.py
(+80 files in other folders)
