[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gh-search-agent"
version = "0.1.0"
description = "Natural language to GitHub repository search agent"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6,<3",
    "requests>=2.31,<3",
    "openai>=1.30,<2",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "responses>=0.25,<1",
]

[project.scripts]
gh-search = "gh_search.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
